separate youtubedl stdout by line

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "update": "node ./scripts/download.js",
     "test": "vows ./test/*.js --spec"
   },
+  "dependencies": {
+    "event-stream": "~2.1.8"
+  },
   "devDependencies": {
     "vows": "0.5.x"
   },
