--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "request": "~2.37.0"
   },
   "devDependencies": {
-    "vows": "~0.7.0"
+    "vows": "~0.7.0",
+    "assert-diff": "~0.0.4"
   },
   "licenses": [
     {
