document how to keep youtube-dl binary up to date. fixes #61

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "scripts": {
     "preinstall": "node ./scripts/download.js",
+    "preupdate": "node ./scripts/download.js",
     "test": "vows ./test/*.js --spec"
   },
   "dependencies": {
