install module before download

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lib": "./lib"
   },
   "scripts": {
-    "preinstall": "node ./scripts/download.js",
+    "preinstall": "npm install request; node ./scripts/download.js",
     "preupdate": "node ./scripts/download.js",
     "test": "vows ./test/*.js --spec"
   },
