--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   },
   "dependencies": {
     "mkdirp": "^0.5.1",
+    "path-extra": "^3.0.0",
     "request": "^2.69.0",
-    "sort-object": "^3.0.1",
     "streamify": "~0.2.3"
   },
   "devDependencies": {
