--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "youtube-dl",
-  "description": "youtube-dl driver for node",
-  "keywords": [
-    "youtube",
-    "video",
-    "download"
-  ],
-  "version": "1.11.2",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/fent/node-youtube-dl.git"
-  },
-  "author": "Roly Fentanes (https://github.com/fent)",
-  "contributors": [
-    "Przemyslaw Pluta <przemyslawplutadev@gmail.com> (http://przemyslawpluta.com)"
-  ],
-  "main": "./lib/youtube-dl.js",
-  "directories": {
-    "lib": "./lib"
-  },
-  "scripts": {
-    "postinstall": "node ./scripts/download.js",
-    "update": "node ./scripts/download.js",
-    "test": "vows ./test/*.js --spec"
-  },
-  "dependencies": {
-    "mkdirp": "^0.5.1",
-    "request": "^2.72.0",
-    "streamify": "~0.2.5"
-  },
-  "devDependencies": {
-    "vows": "*"
-  },
-  "license": "MIT"
+    "name": "@stem/youtube-dl",
+    "description": "youtube-dl driver for node",
+    "keywords": [
+        "youtube",
+        "video",
+        "download"
+    ],
+    "version": "1.11.3",
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/stems/node-youtube-dl.git"
+    },
+    "author": "Roly Fentanes (https://github.com/fent)",
+    "contributors": [
+        "Przemyslaw Pluta <przemyslawplutadev@gmail.com> (http://przemyslawpluta.com)",
+        "Andrew Carlson <andrew@stem.is>"
+    ],
+    "main": "./lib/youtube-dl.js",
+    "directories": {
+        "lib": "./lib"
+    },
+    "scripts": {
+        "postinstall": "node ./scripts/download.js",
+        "update": "node ./scripts/download.js",
+        "test": "vows ./test/*.js --spec"
+    },
+    "dependencies": {
+        "mkdirp": "^0.5.1",
+        "request": "^2.72.0",
+        "streamify": "~0.2.5"
+    },
+    "devDependencies": {
+        "vows": "*"
+    },
+    "license": "MIT"
 }
