--- a/package.json
+++ b/package.json
@@ -57,13 +57,13 @@
     "test": "vows ./test/*.js --spec"
   },
   "dependencies": {
-    "hh-mm-ss": "^1.2.0",
-    "mkdirp": "^0.5.1",
-    "request": "^2.83.0",
-    "streamify": "^0.2.9"
+    "hh-mm-ss": "~1.2.0",
+    "mkdirp": "~0.5.1",
+    "request": "~2.88.0",
+    "streamify": "~0.2.9"
   },
   "devDependencies": {
-    "vows": "*"
+    "vows": "latest"
   },
   "license": "MIT",
   "bugs": {
