build: add release process

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "youtube-dl",
+  "name": "@microlink/youtube-dl",
   "description": "youtube-dl driver for node",
   "keywords": [
     "youtube",
