build: setup node version

--- a/package.json
+++ b/package.json
@@ -173,6 +173,9 @@
     "standard-version": "latest",
     "vows": "latest"
   },
+  "engines": {
+    "node": ">= 8"
+  },
   "files": [
     "lib",
     "scripts"
