--- a/package.json
+++ b/package.json
@@ -159,10 +159,12 @@
     "youtube"
   ],
   "dependencies": {
+    "execa": "~3.2.0",
     "hh-mm-ss": "~1.2.0",
     "mkdirp": "~0.5.1",
     "request": "~2.88.0",
-    "streamify": "~0.2.9"
+    "streamify": "~0.2.9",
+    "universalify": "~0.1.2"
   },
   "devDependencies": {
     "@commitlint/cli": "latest",
