--- a/package.json
+++ b/package.json
@@ -159,6 +159,7 @@
     "youtube"
   ],
   "dependencies": {
+    "electron-util": "~0.13.0",
     "execa": "~3.2.0",
     "hh-mm-ss": "~1.2.0",
     "mkdirp": "~0.5.1",
