--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "youtube-dl",
   "description": "youtube-dl driver for node",
   "homepage": "https://github.com/przemyslawpluta/node-youtube-dl#readme",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "main": "./lib/youtube-dl.js",
   "author": {
     "name": "Roly Fentanes",
@@ -10,12 +10,12 @@
   },
   "contributors": [
     {
-      "name": "przemyslawpluta",
-      "email": "przemekpluta@hotmail.com"
+      "name": "Roly Fentanes",
+      "email": "roly426@gmail.com"
     },
     {
-      "name": "walheresq",
-      "email": "walheresq@hotmail.com"
+      "name": "przemyslawpluta",
+      "email": "przemekpluta@hotmail.com"
     },
     {
       "name": "Kiko Beats",
@@ -46,20 +46,24 @@
       "email": "jack.lee2980@gmail.com"
     },
     {
-      "name": "Jeremy Louie",
-      "email": "jeremy@jeremylouie.com"
-    },
-    {
       "name": "tifroz",
       "email": "hhardel@gmail.com"
     },
     {
-      "name": "Sergey M․",
-      "email": "dstftw@gmail.com"
+      "name": "Calvin",
+      "email": "calvin@sealtelecom.com.br"
     },
     {
       "name": "EragonJ",
       "email": "eragonj@eragonj.me"
+    },
+    {
+      "name": "Jeremy Louie",
+      "email": "jeremy@jeremylouie.com"
+    },
+    {
+      "name": "Sergey M․",
+      "email": "dstftw@gmail.com"
     },
     {
       "name": "optikfluffel",
@@ -70,16 +74,16 @@
       "email": "mail@t3rr0r.com"
     },
     {
-      "name": "Calvin",
-      "email": "calvin@sealtelecom.com.br"
-    },
-    {
       "name": "coderaiser",
       "email": "mnemonic.enemy@gmail.com"
     },
     {
-      "name": "Roly Fentanes",
-      "email": "roly426@gmail.com"
+      "name": "liuye.adam",
+      "email": "liuye.adam@bytedance.com"
+    },
+    {
+      "name": "walheresq",
+      "email": "walheresq@hotmail.com"
     },
     {
       "name": "Alireza Mirian",
