--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "youtube-dl",
   "description": "youtube-dl driver for node",
   "homepage": "https://github.com/przemyslawpluta/node-youtube-dl#readme",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "main": "./lib/youtube-dl.js",
   "author": {
     "name": "Roly Fentanes",
@@ -30,56 +30,56 @@
       "email": "benjamin@coriou.net"
     },
     {
-      "name": "Gregoire Guémas",
-      "email": "gregoire.guemas@navispeed.eu"
-    },
-    {
       "name": "Jaime Marquínez Ferrándiz",
       "email": "jaime.marquinez.ferrandiz@gmail.com"
+    },
+    {
+      "name": "Gregoire Guémas",
+      "email": "gregoire.guemas@navispeed.eu"
     },
     {
       "name": "Jay Baker",
       "email": "logikal@gmail.com"
     },
     {
-      "name": "Jack Li",
-      "email": "jack.lee2980@gmail.com"
+      "name": "David Smusz",
+      "email": "dsmoosh@Davids-MacBook-Pro.local"
     },
     {
       "name": "Frederic Germain",
       "email": "frederic.germain@gmail.com"
     },
     {
-      "name": "Calvin",
-      "email": "calvin@sealtelecom.com.br"
+      "name": "Jack Li",
+      "email": "jack.lee2980@gmail.com"
     },
     {
       "name": "optikfluffel",
       "email": "optik@fluffel.io"
     },
     {
-      "name": "Jeremy Louie",
-      "email": "jeremy@jeremylouie.com"
-    },
-    {
       "name": "Sergey M․",
       "email": "dstftw@gmail.com"
-    },
-    {
-      "name": "EragonJ",
-      "email": "eragonj@eragonj.me"
     },
     {
       "name": "t3rr0r",
       "email": "mail@t3rr0r.com"
     },
     {
+      "name": "Calvin",
+      "email": "calvin@sealtelecom.com.br"
+    },
+    {
+      "name": "EragonJ",
+      "email": "eragonj@eragonj.me"
+    },
+    {
       "name": "tifroz",
       "email": "hhardel@gmail.com"
     },
     {
-      "name": "coderaiser",
-      "email": "mnemonic.enemy@gmail.com"
+      "name": "Jeremy Louie",
+      "email": "jeremy@jeremylouie.com"
     },
     {
       "name": "liuye.adam",
@@ -156,6 +156,10 @@
     {
       "name": "btmdave",
       "email": "dave@bluetopmedia.com"
+    },
+    {
+      "name": "coderaiser",
+      "email": "mnemonic.enemy@gmail.com"
     }
   ],
   "repository": {
