fix: don't fail on videos when ytdl returns filesize null

--- a/package.json
+++ b/package.json
@@ -160,6 +160,10 @@
     {
       "name": "coderaiser",
       "email": "mnemonic.enemy@gmail.com"
+    },
+    {
+      "name": "RafaelKr",
+      "email": "coding@rafael.kr"
     }
   ],
   "repository": {
