--- a/package.json
+++ b/package.json
@@ -181,9 +181,9 @@
   "dependencies": {
     "debug": "~4.1.1",
     "execa": "~3.2.0",
+    "got": "~10.6.0",
     "hh-mm-ss": "~1.2.0",
     "mkdirp": "~0.5.1",
-    "request": "~2.88.0",
     "streamify": "~0.2.9",
     "universalify": "~0.1.2"
   },
