--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
       "email": "jaime.marquinez.ferrandiz@gmail.com"
     },
     {
+      "name": "Bruno",
+      "email": "brunobg@gmail.com"
+    },
+    {
       "name": "Jay Baker",
       "email": "logikal@gmail.com"
     },
@@ -46,28 +50,28 @@
       "email": "dsmoosh@Davids-MacBook-Pro.local"
     },
     {
-      "name": "Jack Li",
-      "email": "jack.lee2980@gmail.com"
-    },
-    {
       "name": "Frederic Germain",
       "email": "frederic.germain@gmail.com"
+    },
+    {
+      "name": "Jack Li",
+      "email": "jack.lee2980@gmail.com"
     },
     {
       "name": "Calvin",
       "email": "calvin@sealtelecom.com.br"
     },
     {
-      "name": "Sergey M․",
-      "email": "dstftw@gmail.com"
+      "name": "EragonJ",
+      "email": "eragonj@eragonj.me"
     },
     {
       "name": "Jeremy Louie",
       "email": "jeremy@jeremylouie.com"
     },
     {
-      "name": "EragonJ",
-      "email": "eragonj@eragonj.me"
+      "name": "Sergey M․",
+      "email": "dstftw@gmail.com"
     },
     {
       "name": "optikfluffel",
@@ -82,48 +86,8 @@
       "email": "hhardel@gmail.com"
     },
     {
-      "name": "coderaiser",
-      "email": "mnemonic.enemy@gmail.com"
-    },
-    {
-      "name": "liuye.adam",
-      "email": "liuye.adam@bytedance.com"
-    },
-    {
-      "name": "walheresq",
-      "email": "walheresq@hotmail.com"
-    },
-    {
-      "name": "Alireza Mirian",
-      "email": "alireza.mirian@gmail.com"
-    },
-    {
-      "name": "▟ ▖▟ ▖",
-      "email": "dodo.the.last@gmail.com"
-    },
-    {
-      "name": "AndriiHryhorovskyi",
-      "email": "private_ukr_pochta@ukr.net"
-    },
-    {
-      "name": "Davide Pastore",
-      "email": "pasdavide@gmail.com"
-    },
-    {
       "name": "Farrin Reid",
       "email": "blakmatrix@gmail.com"
-    },
-    {
-      "name": "Jason Penny",
-      "email": "jason@jooraccess.com"
-    },
-    {
-      "name": "Juan C. Olivares",
-      "email": "cristobal@cxsoftware.com"
-    },
-    {
-      "name": "Lopez Hugo",
-      "email": "hugo.lpz@gmail.com"
     },
     {
       "name": "Meral",
@@ -138,6 +102,10 @@
       "email": "ngotchac@gmail.com"
     },
     {
+      "name": "Nikolay Lapshin",
+      "email": "nlapshin1989@gmail.com"
+    },
+    {
       "name": "Panayiotis",
       "email": "panayiotis.eracleous@gmail.com"
     },
@@ -150,8 +118,20 @@
       "email": "pietro.passarelli@gmail.com"
     },
     {
+      "name": "DiegoFleitas",
+      "email": "diego.fleitas68@gmail.com"
+    },
+    {
+      "name": "Davide Pastore",
+      "email": "pasdavide@gmail.com"
+    },
+    {
       "name": "Rafael Kraut",
       "email": "rk@vi-arise.com"
+    },
+    {
+      "name": "Alireza Mirian",
+      "email": "alireza.mirian@gmail.com"
     },
     {
       "name": "Sagi Nadir",
@@ -164,6 +144,38 @@
     {
       "name": "btmdave",
       "email": "dave@bluetopmedia.com"
+    },
+    {
+      "name": "coderaiser",
+      "email": "mnemonic.enemy@gmail.com"
+    },
+    {
+      "name": "liuye.adam",
+      "email": "liuye.adam@bytedance.com"
+    },
+    {
+      "name": "▟ ▖▟ ▖",
+      "email": "dodo.the.last@gmail.com"
+    },
+    {
+      "name": "AndriiHryhorovskyi",
+      "email": "private_ukr_pochta@ukr.net"
+    },
+    {
+      "name": "Jason Penny",
+      "email": "jason@jooraccess.com"
+    },
+    {
+      "name": "walheresq",
+      "email": "walheresq@hotmail.com"
+    },
+    {
+      "name": "Juan C. Olivares",
+      "email": "cristobal@cxsoftware.com"
+    },
+    {
+      "name": "Lopez Hugo",
+      "email": "hugo.lpz@gmail.com"
     }
   ],
   "repository": {
