--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "youtube-dl",
   "description": "youtube-dl driver for node",
   "homepage": "https://github.com/przemyslawpluta/node-youtube-dl#readme",
-  "version": "3.4.0",
+  "version": "3.4.1",
   "main": "./lib/youtube-dl.js",
   "author": {
     "name": "Roly Fentanes",
@@ -34,24 +34,24 @@
       "email": "benjamin@coriou.net"
     },
     {
-      "name": "Jaime Marquínez Ferrándiz",
-      "email": "jaime.marquinez.ferrandiz@gmail.com"
-    },
-    {
       "name": "Gregoire Guémas",
       "email": "gregoire.guemas@navispeed.eu"
+    },
+    {
+      "name": "Jaime Marquínez Ferrándiz",
+      "email": "jaime.marquinez.ferrandiz@gmail.com"
     },
     {
       "name": "Jay Baker",
       "email": "logikal@gmail.com"
     },
     {
-      "name": "David Smusz",
-      "email": "dsmoosh@Davids-MacBook-Pro.local"
-    },
-    {
       "name": "Jack Li",
       "email": "jack.lee2980@gmail.com"
+    },
+    {
+      "name": "David Smusz",
+      "email": "dsmoosh@Davids-MacBook-Pro.local"
     },
     {
       "name": "Barry Carlyon | Kora",
@@ -74,16 +74,16 @@
       "email": "mail@t3rr0r.com"
     },
     {
-      "name": "Sergey M․",
-      "email": "dstftw@gmail.com"
+      "name": "Calvin",
+      "email": "calvin@sealtelecom.com.br"
     },
     {
       "name": "tifroz",
       "email": "hhardel@gmail.com"
     },
     {
-      "name": "Calvin",
-      "email": "calvin@sealtelecom.com.br"
+      "name": "Sergey M․",
+      "email": "dstftw@gmail.com"
     },
     {
       "name": "EragonJ",
@@ -92,6 +92,10 @@
     {
       "name": "coderaiser",
       "email": "mnemonic.enemy@gmail.com"
+    },
+    {
+      "name": "kennylbj",
+      "email": "632786081@qq.com"
     },
     {
       "name": "liuye.adam",
